@@ -6,6 +6,8 @@
 	* sanei/sanei_constrain_value.c: Removed unnecessary variable.
 	* backend/agfafocus.c: Fixed some warnings.
 	* backend/as6e.c: Fixed some warnings.
+	* backend/coolscan.c backend/coolscan-scsi.h: Fixed a bunch of
+	  compilation warnings.
 
 2003-04-03  Eddy De Greef <eddy_de_greef at tiscali dot be>
 
